test_data/Xml/Unexpected/Unserializable/InvalidClassName/valueList/wrong.xml.exception
Expected an element representing an instance of class ValueList with element name valueList, but got: utterlyInvalid at: the beginning